feat (Jira MCP Server): added PUT request
